--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,14 @@
         android:enabled="true"
         android:exported="true"/>
 
+    <service
+        android:name=".SmartService"
+        android:exported="false">
+      <intent-filter>
+        <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+      </intent-filter>
+    </service>
+
     <receiver android:name=".NaiveService$NaiveBroadcastReceiver"/>
   </application>
 
