--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 25
+  compileSdkVersion 27
   defaultConfig {
     applicationId "academy.android.backgroundjobstat"
     minSdkVersion 16
-    targetSdkVersion 25
+    targetSdkVersion 27
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -19,19 +19,12 @@ android {
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation 'com.android.support:appcompat-v7:25.4.0'
-  compile('com.google.android.gms:play-services-location:11.6.0') {
-    exclude group: 'com.android.support', module: 'support-v4'
-  }
-  compile 'com.firebase:firebase-jobdispatcher:0.8.4'
-
-  implementation('com.google.firebase:firebase-core:11.6.0') {
-    exclude group: 'com.android.support', module: 'support-v4'
-  }
-  compile 'com.google.firebase:firebase-database:11.6.0'
-
-
+  implementation fileTree(include: ['*.jar'], dir: 'libs')
+  implementation 'com.android.support:appcompat-v7:27.1.0'
+  implementation 'com.google.android.gms:play-services-location:11.8.0'
+  implementation 'com.firebase:firebase-jobdispatcher:0.8.4'
+  implementation 'com.google.firebase:firebase-core:11.8.0'
+  implementation 'com.google.firebase:firebase-database:11.8.0'
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.1'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
